2005-09-04  Peter Dennis Bartok  <pbartok@novell.com>

	* Charcode.cs: Created; provides StandardCharCode <-> character 
	  translation
	* Charset.cs: Created; provides two standard charsets, AnsiGeneral 
	  and AnsiSymbol
	* CharsetFlags.cs: Created
	* CharsetType.cs: Created
	* ClassDelegate.cs: Created; allows consumer to register a callback
	  for RTF command classes
	* Color.cs: Created; provides access to RTF-defined RGB color sets
	* DestinationDelegate.cs: Created; allows consumer to register a
	  callback for Destination class types
	* Font.cs: Created; provides access to RTF-defined font descriptions
	* KeysInit.cs: Created; provides translation table from RTF keyword
	  to Major/Minor classes
	* KeyStruct.cs: Created
	* Major.cs: Created; describes available RTF command groups
	* Minor.cs: Created; describes available 'arguments' for command groups
	* README: Created
	* RTF.cs: Created; contains main RTF parser code
	* rtf.csproj: Created; provides Visual Studio project that allows to
	  use test this assembly via the included test.cs
	  to provide 
	* RTFException.cs: Created; provides custom RTF exception class
	* StandardCharCode.cs: Created
	* StandardCharName.cs: Created
	* Style.cs: Created; provides access to RTF-define styles
	* StyleElement.cs: Created; provides support class to allow parsing
	  recursive styles
	* StyleType.cs: Created
	* test.cs: Test code showing use of RTF class (also acts as Main for
	  the included Visual Studio project)
	* TextMap.cs: Created; allows to create simple translation table for
	  converting parsed RTF document to text; table-based
	* TokenClass.cs: Created; describes all available RTF command classes